--- a/style.css
+++ b/style.css
@@ -19,13 +19,13 @@ body {
   padding: 8px 8px 8px 32px;
   text-decoration: none;
   font-size: 25px;
-  color: #f3f3f3;
+  color: #b1b1b1;
   display: block;
   transition: 0.3s;
 }
 
 .sidebar a:hover {
-  color: #b1b1b1;
+  color: #d2d2d2;
 }
 
 .sidebar .closebtn {
@@ -34,6 +34,9 @@ body {
   left: 30px;
   font-size: 35px;
   margin-left: 50px;
+}
+.sidebar .closebtn:hover {
+  color: #dc1313;
 }
 
 .openbtn {
