--- a/style.css
+++ b/style.css
@@ -1,7 +1,14 @@
 body {
   font-family: "Lato", sans-serif;
 }
-
+.title-bar-text {
+  position: relative;
+  top: 20px;
+  font-family: cursive;
+}
+.title-bar {
+  background-color: rgb(20, 40, 80);
+}
 .sidebar {
   height: 100%;
   width: 0;
@@ -45,7 +52,7 @@ body {
   background-color: rgb(20, 40, 80);
   color: white;
   padding: 10px 15px;
-  border:none;
+  border: none;
   position: absolute;
   top: 30px;
   left: 20px;
@@ -73,34 +80,52 @@ body {
   position: relative;
   top: -40px;
   right: 25px;
+  color: white;
+}
+.github-icon:hover {
+  color: rgb(0, 0, 0);
 }
 .telegram-icon {
   position: relative;
   top: -40px;
   right: 30px;
+  color: white;
+}
+.telegram-icon:hover {
+  color: rgb(42 171 238);
 }
 .instagram-icon {
   position: relative;
   top: -40px;
   right: 35px;
+  color: white;
+}
+.instagram-icon:hover {
+  color: #dc2743;
 }
 .down-bar {
-  font-size: 7px;
+  font-size: 17px;
+  background-color: rgb(20, 40, 80);
+}
+.down-bar .tarikh {
+  font-size: 12px;
 }
 
-* {box-sizing: border-box;}
+* {
+  box-sizing: border-box;
+}
 
 .search-bar .search-container {
   float: left;
   position: relative;
-  top: -50px;
-  left: 250px;
+  top: -48px;
+  left: 1000px;
 }
 
-.search-bar input[type=text] {
+.search-bar input[type="text"] {
   padding: 6px;
   margin-top: 8px;
-  font-size: 13px;
+  font-size: 12px;
   border: none;
 }
 
@@ -110,7 +135,7 @@ body {
   margin-top: 8px;
   margin-right: 16px;
   background: rgb(39, 73, 109);
-  font-size: 13px;
+  font-size: 12px;
   border: none;
   cursor: pointer;
 }
@@ -123,7 +148,9 @@ body {
   .topnav .search-container {
     float: none;
   }
-  .search-bar a, .topnav input[type=text], .topnav .search-container button {
+  .search-bar a,
+  .topnav input[type="text"],
+  .topnav .search-container button {
     float: none;
     display: block;
     text-align: left;
@@ -131,7 +158,7 @@ body {
     margin: 0;
     padding: 14px;
   }
-  .seach-bar input[type=text] {
-    border: 1px solid #ccc;  
+  .seach-bar input[type="text"] {
+    border: 1px solid #ccc;
   }
 }
