remove serach bar

--- a/style.css
+++ b/style.css
@@ -109,56 +109,16 @@ body {
 }
 .down-bar .tarikh {
   font-size: 12px;
+  color: white;
+  position: relative;
+  right: 0px;
 }
 
 * {
   box-sizing: border-box;
 }
-
-.search-bar .search-container {
-  float: left;
-  position: relative;
-  top: -48px;
-  left: 1000px;
-}
-
-.search-bar input[type="text"] {
-  padding: 6px;
-  margin-top: 8px;
-  font-size: 12px;
-  border: none;
-}
-
-.search-bar .search-container button {
-  float: right;
-  padding: 6px 10px;
-  margin-top: 8px;
-  margin-right: 16px;
-  background: rgb(39, 73, 109);
-  font-size: 12px;
-  border: none;
-  cursor: pointer;
-}
-
-.seach-bar .search-container button:hover {
-  background: rgb(30, 70, 100);
-}
-
 @media screen and (max-width: 600px) {
   .topnav .search-container {
     float: none;
-  }
-  .search-bar a,
-  .topnav input[type="text"],
-  .topnav .search-container button {
-    float: none;
-    display: block;
-    text-align: left;
-    width: 100%;
-    margin: 0;
-    padding: 14px;
-  }
-  .seach-bar input[type="text"] {
-    border: 1px solid #ccc;
   }
 }
