edit down bar and background color of login page

--- a/login-page-style.css
+++ b/login-page-style.css
@@ -8,7 +8,7 @@
 body{
   margin: 0;
   padding: 0;
-  background: linear-gradient(120deg,#F4F9F9,#CCF2F4,#A4EBF3);
+  background: linear-gradient(120deg,#0F4C75,#3282B8,#0F4C75);
   height: 100vh;
   overflow: hidden;
 }
