--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
 body {
-  font-family: "Lato", sans-serif;
+  line-height: 1.5;
+  font-family: 'poppins', sans-serif;
 }
 .title-bar-text {
   position: relative;
   top: 20px;
-  font-family: cursive;
+  font-family: math;
 }
 .title-bar {
   background-color: rgb(20, 40, 80);
@@ -20,19 +21,21 @@ body {
   overflow-x: hidden;
   transition: 0.5s;
   padding-top: 60px;
+  opacity: 1;
 }
 
 .sidebar a {
   padding: 8px 8px 8px 32px;
   text-decoration: none;
   font-size: 25px;
-  color: #b1b1b1;
+  color: #c5c5c5;
   display: block;
-  transition: 0.3s;
+  transition: all 0.5s ease;
+  text-transform: capitalize;
 }
 
 .sidebar a:hover {
-  color: #d2d2d2;
+  color: #eeeeee;
 }
 
 .sidebar .closebtn {
@@ -103,22 +106,80 @@ body {
 .instagram-icon:hover {
   color: #dc2743;
 }
-.down-bar {
-  font-size: 17px;
-  background-color: rgb(20, 40, 80);
-}
-.down-bar .tarikh {
-  font-size: 12px;
-  color: white;
-  position: relative;
-  right: 0px;
-}
-
 * {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
 }
 @media screen and (max-width: 600px) {
   .topnav .search-container {
     float: none;
   }
+}
+.containar{
+  max-width: 1170px;
+  margin: auto;
+}
+.row{
+  display: flex;
+  flex-wrap: wrap;
+}
+ul{
+  list-style:none;
+}
+.footer{
+  background-color: rgb(20, 40, 80);
+  padding: 70px 0;
+}
+.footer-col{
+  width: 25%;
+  padding: 0 15px;
+}
+.footer-col h4{
+  font-size: 18px;
+  color: #fff;
+  text-transform: capitalize;
+  margin-bottom: 35px;
+  font-weight: 500;
+  position: relative;
+}
+.footer-col h4::before{
+  content: "";
+  position: absolute;
+  left: 0px;
+  bottom: -10px;
+  background-color: #e91e63;
+  height: 2px;
+  box-sizing: border-box;
+  width: 50%;
+}
+.footer-col ul li:not(:last-child){
+  margin-bottom: 10px;
+}
+.footer-col ul li a{
+  font-size: 16px;
+  text-transform: capitalize;
+  color: #fff;
+  text-decoration: none;
+  font-weight: 300;
+  color: #bbbbbb;
+  display: block;
+  transition: all 0.3s ease;
+}
+.footer-col ul li a:hover{
+  color: #ffffff;
+  padding-left: 8px;
+}
+.footer-col .social-links{
+  display: inline-block;
+  height: 40px;
+  width: 40px;
+  background-color: rgba(255, 255, 255, 0.2);
+  margin: 0 10px 10px 0;
+  text-align: center;
+  line-height: 40px;
+  border-radius: 50%;
+  color: #ffffff;
+  transition: all 0.5s ease; 
 }
