--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+@font-face {
+  font-family: Vazir;
+  src: url("./assets/Vazir.ttf");
+}
 body {
   line-height: 1.5;
   font-family: "poppins", sans-serif;
@@ -178,4 +182,7 @@ ul {
   display: flex;
   flex-direction: row;
   margin-top: 10px;
+}
+.size{
+  position: relative;
 }
